<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp">

    <TextView
        android:id="@+id/cookNowStepTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/orange"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:id="@+id/cookNowStepContentContainer"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_below="@+id/cookNowStepTitle"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cookNowStepTitle">

        <TextView
            android:id="@+id/cookNowStepContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/orange"
            android:justificationMode="inter_word"
            android:padding="20dp"
            android:background="@drawable/border"
            app:layout_constraintStart_toStartOf="parent" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>