...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/timerCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/timerCreateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cook_now_timer_create_title"
                android:textSize="30sp"
                android:textStyle="bold"
...

            <TextView
                android:id="@+id/timerCreateTitleName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:text="@string/timer_hour_hint" />

                    </com.google.android.material.textfield.TextInputLayout>
...
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:text="@string/timer_min_hint" />

                    </com.google.android.material.textfield.TextInputLayout>
...
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:text="@string/timer_sec_hint" />

                    </com.google.android.material.textfield.TextInputLayout>
...

                <LinearLayout
                    android:id="@+id/startTimer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/startTimerText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cook_now_timer_create_button" />
                </LinearLayout>
            </LinearLayout>
...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/timerEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/timerEditTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cook_now_timer_edit_title"
                android:textSize="30sp"
                android:textStyle="bold"
...

            <TextView
                android:id="@+id/timerEditTitleName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/timerHourNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/timerMinNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/timerSecNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <LinearLayout
                        android:id="@+id/pauseTimer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/pauseTimerText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cook_now_timer_edit_pause_button" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/resumeTimer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/resumeTimerText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cook_now_timer_edit_resume_button" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/cancelTimer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/cancelTimerText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cook_now_timer_edit_cancel_button" />
                    </LinearLayout>

...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/timerList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...

        <TextView
            android:id="@+id/timerListTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cook_now_timer_list_title"
            android:textSize="30sp"
            android:textStyle="bold"
...
